# enjinn

./: .gitattributes  .gitignore  .gitignore_backup  BUILD.md  BUILD_FIX_STEPS.md  FONTAWESOME6_SETUP.md  MANUAL_FIX_GUIDE.md  MIGRATION.md  NEXT_STEPS.md  OPTIMIZATION_COMPLETE.md  PROPERTY_DRAWER_USAGE.md  README1.md  SECRET_PHASE_IMPLEMENTATION.md  SETUP.md  UI_SYSTEM_DOCUMENTATION.md  build.bat  build.sh  fix_icons.ps1  vcpkg.json
EnJinn/: CMakeLists.txt  CMakeLists.txt.backup  EnJinnCore.rc  main.cpp  vcpkg.json
EnJinn/core/coreConfig/: enjinnConfig.h  enjinnConfigInternal.h
EnJinn/core/enjinnEditor/: Editor.cpp  Editor.h  README.md
EnJinn/core/enjinnRuntime/: README.md  enjinnMain.cpp
EnJinn/core/enjinnSTD/: README.md  compilerIntrinsics.h  enjinnOptional.h  enjinnSizes.h  fileChanged.cpp  fileChanged.h  staticString.h  staticVector.h  validatePath.cpp  validatePath.h
EnJinn/core/sharedRuntime/: assetManager.cpp  assetManager.h  baseContainer.h  containerInformation.h  enjinnContext.h
EnJinn/gameplay/: containers.cpp  containers.h  containers_old.h
EnJinn/gameplay/containers/: enjinnGameplay.h  threedtest.h
EnJinn/gameplay/dll/: dllMain.cpp  (+1 more)
EnJinn/include/: IconsFontAwesome6.h  enjinnConfig.h
EnJinn/resources/: logs.txt
EnJinn/test-build/: ALL_BUILD.vcxproj  CMakeCache.txt  EnJinnCore.sln  EnJinnCore.vcxproj  EnJinnCore.vcxproj.filters  EnJinnGameplay.vcxproj  EnJinnGameplay.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini
EnJinn/tests/: test_main.cpp
(+144 files in other folders)
